<resources>
    <string name="app_name">MyNews</string>

    <!-- Searchable -->
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="checkbox1">Culture</string>
    <string name="checkbox2">Environment</string>
    <string name="checkbox3">Foreign</string>
    <string name="checkbox4">Politics</string>
    <string name="checkbox5">Sports</string>
    <string name="checkbox6">Technology</string>
    <string name="search_button">SEARCH</string>
    <string name="search_hint">Search query term</string>
    <string name="query_error">You must edit a search by query term !</string>
    <string name="box_unchecked">You must select one box !</string>

    <!-- Option menus title -->
    <string name="image_description">MyNews image</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Option menus title -->
    <string name="research">Search</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="configurations">Configurations</string>

    <!-- Notification page -->
    <string name="switch_notifications">Enable notifications (once per day)</string>
    <string name="default_notification_channel_id">Default channel</string>

    <!-- Notification placeholder -->
    <string name="text_notification">A new article is available !</string>

    <!-- Http requests -->
    <string name="no_internet">NO INTERNET CONNECTION !
        Please refresh the screen </string>

</resources>
