<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_news"
            android:icon="@drawable/ic_search"
            android:title="@string/research" />
    </group>

    <item android:title="@string/configurations">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_notifications"
                    android:icon="@drawable/ic_notifications"
                    android:title="@string/notifications" />
                <item
                    android:id="@+id/activity_main_drawer_help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/help" />
                <item
                    android:id="@+id/activity_main_drawer_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>