<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chartier.virginie.mynews.controller.SearchActivity">

    <LinearLayout
        android:id="@+id/activity_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <include layout="@layout/toolbar" />

        <include layout="@layout/query_search_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight=".5"
                android:text="@string/begin_date" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight=".5"
                android:text="@string/end_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/begin_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight=".5"
                android:drawableEnd="@drawable/ic_action_select"
                android:drawableRight="@drawable/ic_action_select"
                android:focusable="true"
                android:inputType="date"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight=".5"
                android:drawableEnd="@drawable/ic_action_select"
                android:drawableRight="@drawable/ic_action_select"
                android:focusable="true"
                android:inputType="date"
                android:textColorHint="@color/black" />

        </LinearLayout>

        <include layout="@layout/checkbox_layout" />

        <Button
            android:id="@+id/activity_search_button"
            style="@style/MainStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:text="@string/search_button"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>